<resources>
    <string name="app_name">La Guilde</string>
    <string name="channel_id">1976</string>
    <string name="channel_name">LaGuildeChannel</string>
    <string name="channel_description">LaGuildeChannelDescription</string>

    <!-- Menu -->
    <string name="home">Accueil</string>
    <string name="events">Evènements</string>
    <string name="results">Résultats</string>
    <string name="settings">Réglages</string>

    <!-- Navigation -->
    <string name="back">Retour</string>
    <string name="next">Suite</string>
    <string name="done">Terminé</string>


    <!-- Erreurs -->
    <string name="err_no_network">Pas de connexion internet !</string>
    <string name="err_no_data">Aucune donnée trouvée !</string>

    <!-- Divers -->
    <string name="ok">OK</string>
    <string name="cancel">Annuler</string>
    <string name="loading">Chargement...</string>
    <string name="credits">Crédits</string>
    <string name="save">Enregistrer</string>
    <string name="save_changes">Enregistrer les modifications</string>

    <!-- Settings -->
    <string name="current_version">Version actuelle</string>
    <string name="check_version_now">Vérifier la version</string>
    <string name="filters">Filtres</string>
    <string name="identity">Identité</string>

    <string name="title_filters">Type d\'évènements à afficher</string>
    <string name="magic">Magic</string>
    <string name="pokemon">Pokémon</string>
    <string name="misc">Divers</string>
    <string name="all">Tout</string>

    <string name="title_identity">Vos identifiants</string>
    <string name="pseudo">Pseudo</string>
    <string name="dci">Numéro de DCI </string>
    <string name="hint_pseudo">Entrez un pseudo</string>
    <string name="hint_dci">Entrez votre numéro de DCI</string>

    <string name="tooltips">Info-bulles</string>
    <string name="onboarding">Passer l\'introduction</string>
    <string name="check_version">Vérifier la version au démarrage</string>

    <string name="title_new_version">Nouvelle version disponible</string>
    <string name="text_new_version">Une nouvelle version de l\'application est disponible</string>

    <string name="download">Télécharger</string>

    <!-- Magic -->
    <string name="life_points">Points à vie</string>
    <string name="season_points">Points de la saison</string>

    <!-- Accueil -->
    <string name="confirm">Veuillez confirmer</string>

    <string name="open_address">Ouvrir l\'adresse dans l\'application de cartographie</string>
    <string name="open_phone">Appeler La Guilde</string>
    <string name="open_contact">Envoyer un email à La Guilde</string>
    <string name="open_website">Visiter le site de La Guilde</string>


    <!-- Evenements -->
    <string name="click_to_register">Cliquer pour s\'inscrire</string>

    <string name="tab_text_1">Standard</string>
    <string name="tab_text_2">Draft</string>
    <string name="tab_text_3">Modern</string>
    <string name="tab_text_4">Legacy</string>
    <string name="tab_text_5">Duel Commander</string>


    <!-- A propos -->
    <string name="app_descrip">
        Tous les évènements de La Guilde dans votre poche !\n
        Consultez la liste des prochains évènements et les résultats des tournois passés.
    </string>
    <string name="app_credits">Application développée par</string>
    <string name="text_no_new_version">Vous possédez déjà la dernière version de La Guilde</string>

    <!-- OnBoarding -->
    <string name="intro0">
        Bienvenue dans l\'application de La Guilde !\n\n
        Cette rapide introduction va vous présenter les fonctionnalités disponibles
    </string>
    <string name="intro20">
        La page d\'accueil vous permet de retrouver à tout moment nos coordonnées
    </string>
    <string name="intro1">
        Sur la page des évènements, vous retrouvez l\'ensemble des activités qui vous sont proposées
    </string>
    <string name="intro2">
        Cliquez sur le bouton à gauche pour indiquer votre désir de participer\n
        Vous recevrez une notification 1 heure avant le début de l\'évènement
    </string>
    <string name="intro3">
        La page résultat vous permet de consulter les résultats des tournois, par format
    </string>
    <string name="intro4">
        Enfin, vous pouvez ajuster divers réglages, notamment le filtrage de certains types
        d\'évènements en fonction de vos centres d\'intérêt
    </string>

</resources>
