<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:background="@drawable/bg_month"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.ggpi.laguilde.activities.SettingsActivity"
    tools:showIn="@layout/settings_activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="20dp"
        tools:layout_editor_absoluteY="20dp">

        <TextView
            android:id="@+id/tvVersion"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:text="@string/current_version"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/btnVersion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/check_version_now" />

        <Button
            android:id="@+id/btnFilter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/filters" />

        <Button
            android:id="@+id/btnIdentity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/identity" />


        <Switch
            android:id="@+id/swTooltips"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/tooltips"
            android:theme="@style/greenSwitch" />

        <Switch
            android:id="@+id/swCheckVersion"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/check_version"
            android:theme="@style/greenSwitch" />

        <Switch
            android:id="@+id/swOnBoardingDone"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/onboarding"
            android:theme="@style/greenSwitch" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_changes" />

        <TextView
            android:id="@+id/tvUUID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btnAbout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/credits" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>