<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.ggpi.laguilde.com.ggpi.laguilde.activities.EventsActivity">

    <item
        android:id="@+id/action_home"
        android:orderInCategory="100"
        android:title="@string/home"
        android:icon="@drawable/ic_action_home"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_events"
        android:orderInCategory="200"
        android:title="@string/events"
        android:icon="@drawable/ic_action_events"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_winners"
        android:orderInCategory="300"
        android:title="@string/results"
        android:icon="@drawable/ic_action_winners"
        app:showAsAction="ifRoom" />
<!--
    <item
        android:id="@+id/action_magic"
        android:orderInCategory="350"
        android:title="@string/magic"
        android:icon="@drawable/ic_action_home"
        app:showAsAction="ifRoom" />
-->
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="400"
        android:title="@string/settings"
        android:icon="@drawable/ic_action_settings"
        app:showAsAction="ifRoom" />

</menu>
