<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/accent"
    android:orientation="vertical"
    tools:context="com.ggpi.laguilde.activities.MagicActivity">

    <TextView
        android:id="@+id/lDCI"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="32dp"
        android:text="@string/dci" />

    <TextView
        android:id="@+id/tvDCI"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginRight="48dp" />

    <TextView
        android:id="@+id/lLifePoints"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="32dp"
        android:text="@string/life_points" />

    <TextView
        android:id="@+id/lSeasonPoints"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="32dp"
        android:text="@string/season_points" />

    <TextView
        android:id="@+id/tvLifePoints"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginRight="48dp" />


    <TextView
        android:id="@+id/tvSeasonPoints"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginRight="48dp" />



</LinearLayout>