<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/darkPrimary">


    <ImageView
        android:id="@+id/imageViewTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:layout_marginTop="8dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:src="@drawable/capture0a" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/intro0"
        android:textSize="16sp"
        android:gravity="center"
        android:textColor="@color/lightPrimary"/>


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="300dp"
        android:layout_height="320dp"
        android:layout_gravity="top|center"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:src="@drawable/capture0" />

    <LinearLayout
        android:gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/slideBack"
            android:gravity="bottom|start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/back"
            android:textSize="16sp"
            android:textColor="@color/lightPrimary"
            android:clickable="true"
            android:focusable="true"/>

        <TextView
            android:id="@+id/slideNext"
            android:gravity="bottom|end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/next"
            android:textSize="16sp"
            android:textColor="@color/lightPrimary"
            android:clickable="true"
            android:focusable="true"/>

        <TextView
            android:id="@+id/slideDone"
            android:gravity="bottom|end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/done"
            android:textSize="16sp"
            android:textColor="@color/lightPrimary"
            android:clickable="true"
            android:focusable="true"/>

    </LinearLayout>
</LinearLayout>